--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,31 @@
-version: '3.8'
-
 services:
   backend:
     build: ./backend
     ports:
-      - "${BACKEND_PORT}:8000"
-    env_file:
-      - ./backend/.env
+      - "8000:8000"
+    environment:
+      - DATABASE_URL=postgresql://postgres:postgres@db:5432/tasks_db
     depends_on:
       - db
     volumes:
       - ./backend:/app
     networks:
       - app-network
+    restart: always
 
   db:
     image: postgres:13
-    env_file:
-      - ./backend/.env
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=tasks_db
     ports:
-      - "${POSTGRES_PORT}:5432"
+      - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
       - app-network
+    restart: always
 
 volumes:
   postgres_data:
